Fixed spacing and modal centering of page

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,5 +1,5 @@
 .share-modal {
-  position: absolute;
+  position: fixed;
   z-index: 5;
   border: 1px solid $primary;
   top: 50%;
