--- a/src/scss/components/_thedecisiontree.scss
+++ b/src/scss/components/_thedecisiontree.scss
@@ -5,3 +5,11 @@
   top: 35%;
   text-align: center;
 }
+
+.tree-creator-page h1 {
+  margin-top: 1em;
+}
+
+.tree-creator-page .create-decisions {
+  margin-bottom: 10%;
+}
